scenario adde, preview pages created, some errors fixed

--- a/Previews/preview3.html
+++ b/Previews/preview3.html
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="row mt-3">
         <div class="col-12">
-          <div class="alert alert-secondary" role="alert">Plant vocabulary</div>
+          <div class="alert alert-secondary" role="alert">Real Assets and Bonds</div>
         </div>
       </div>
       <div class="row mt-1 justify-content-between">
@@ -118,7 +118,7 @@
             role="tab"
             aria-controls="profile"
             aria-selected="false"
-            >Plant vocabulary</a
+            >Real Assets and Bonds</a
           >
         </li>
         <li class="nav-item pr-3">
@@ -183,15 +183,15 @@
           <div class="overflow-auto" style="overflow-y: scroll">
             <div class="alert alert-dark text-center" role="alert"><b>Activity Summary</b></div>
             <h5>Activity description</h5>
-            <p>Design a list of vocabulary cards related to plants.</p>
+            <p>Identify the differences between Real assets (capital budgeting) and Bonds (financing decisions).</p>
             <br />
-            <p><b>Type of class: </b> Distance learning</p>
-            <p><b>Educational Level : </b> Lower Secondary Education</p>
-            <p><b>Bloom's Taxonomy: </b> Create</p>
-            <p><b>Amount of students: </b> Less than 10 students</p>
-            <p><b>Subject: </b> Science</p>
-            <p><b>Time of Activity : </b> More than 40 minutes</p>
-            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../result-green.html" role="button"
+            <p><b>Type of class: </b> In the classroom</p>
+            <p><b>Educational Level : </b> Master degree</p>
+            <p><b>Bloom's Taxonomy: </b> Understand</p>
+            <p><b>Amount of students: </b> Between 10-20 students</p>
+            <p><b>Subject: </b> Humanities & Arts</p>
+            <p><b>Time of Activity : </b> Between 10-20 minutes</p>
+            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
               ><i class="far fa-hand-point-left fa-lg"></i> Back</a
             >
           </div>
