--- a/Previews/preview4.html
+++ b/Previews/preview4.html
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="row mt-3">
         <div class="col-12">
-          <div class="alert alert-secondary" role="alert">Create Career Path by Gathering Data</div>
+          <div class="alert alert-secondary" role="alert">Monotheisitic religions</div>
         </div>
       </div>
       <div class="row mt-1 justify-content-between">
@@ -118,7 +118,7 @@
             role="tab"
             aria-controls="profile"
             aria-selected="false"
-            >Create Career Path by Gathering Data</a
+            >Monotheisitic religions</a
           >
         </li>
         <li class="nav-item pr-3">
@@ -176,17 +176,17 @@
             <div class="alert alert-dark text-center" role="alert"><b>Activity Summary</b></div>
             <h5>Activity description</h5>
             <p>
-              Through research, gather data about aspiration of family members and invent career paths for these people
-              and show the skills needed.
+              State three significant monotheisitic religions in the world, and recognize their geographical
+              diversities.
             </p>
             <br />
             <p><b>Type of class: </b> In the Classroom</p>
-            <p><b>Educational Level : </b> Lower Secondary Education</p>
-            <p><b>Bloom's Taxonomy: </b> Create</p>
-            <p><b>Amount of students: </b> Between 30-40 Students</p>
-            <p><b>Subject: </b> Social Science, Business & Law</p>
-            <p><b>Time of Activity : </b> More than 40 minutes</p>
-            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../result-green.html" role="button"
+            <p><b>Educational Level : </b> Bachelor degree</p>
+            <p><b>Bloom's Taxonomy: </b> Remember</p>
+            <p><b>Amount of students: </b> Between 10-20 Students</p>
+            <p><b>Subject: </b> Humanities & Arts</p>
+            <p><b>Time of Activity : </b> Between 20-30 minutes</p>
+            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
               ><i class="far fa-hand-point-left fa-lg"></i> Back</a
             >
           </div>
