--- a/Previews/preview6.html
+++ b/Previews/preview6.html
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="row mt-3">
         <div class="col-12">
-          <div class="alert alert-secondary" role="alert">Hypothesis of eukaryotic</div>
+          <div class="alert alert-secondary" role="alert">Social Class</div>
         </div>
       </div>
       <div class="row mt-1 justify-content-between">
@@ -118,7 +118,7 @@
             role="tab"
             aria-controls="profile"
             aria-selected="false"
-            >Hypothesis of eukaryotic</a
+            >Social Class</a
           >
         </li>
         <li class="nav-item pr-3">
@@ -175,15 +175,15 @@
           <div class="overflow-auto" style="overflow-y: scroll">
             <div class="alert alert-dark text-center" role="alert"><b>Activity Summary</b></div>
             <h5>Activity description</h5>
-            <p>Design a hypothesis to study the effect of fungal cells in eukaryotic.</p>
+            <p>Classify the existing definitions of class in western societies.</p>
             <br />
             <p><b>Type of class: </b> In the Classroom</p>
-            <p><b>Educational Level : </b> Master or Equivalent</p>
-            <p><b>Bloom's Taxonomy: </b> Create</p>
-            <p><b>Amount of students: </b> Between 30-40 students</p>
-            <p><b>Subject: </b> Science</p>
-            <p><b>Time of Activity : </b> More than 40 minutes</p>
-            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../result-green.html" role="button"
+            <p><b>Educational Level : </b> Bacheor degree</p>
+            <p><b>Bloom's Taxonomy: </b> Understand</p>
+            <p><b>Amount of students: </b> Less than 10 students</p>
+            <p><b>Subject: </b> Humanities & Arts</p>
+            <p><b>Time of Activity : </b> Between 20-30 minutes</p>
+            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
               ><i class="far fa-hand-point-left fa-lg"></i> Back</a
             >
           </div>
