--- a/index.html
+++ b/index.html
@@ -68,29 +68,33 @@
     </nav>
     <!-- end of navbar -->
     <div class="container">
-      <div class="feature-wrapper especial-color pt-5 pb-5 mt-5 mt-lg-0">
-        <div class="container">
-          <div class="row">
-            <div class="col-10 mx-auto top-buffer">
-              <div class="text-center">
-                <h1>
-                  <a
-                    href=""
-                    class="typewrite"
-                    data-period="2000"
-                    data-type='[ "Hi, I help you to find proper Learning Design.", "Just select the option and click on submit.", "Always you can back to change your query." ]'
-                  >
-                    <span class="wrap"></span>
-                  </a>
-                </h1>
-              </div>
-            </div>
+      <div class="row justify-content-center">
+        <div class="col-md-5 mt-4 pt-4">
+          <h4>This is Your Role Playing Scenario</h4>
+        </div>
+        <div class="row justify-content-center mt-2">
+          <div class="col-md-8">
+            <p class="text-justify">
+              You are a teacher in the faculty of <b>social science</b>. You know about PyramidApp and you want to
+              search for current LDs on the platform to find some hint about how to use PyramidApp to create
+              collaborative learning design. You just informed about a recommender system that suggests LDs based on
+              your context of teaching. Your next class is for <b>Master Degree</b> students to help them to
+              <b>remember</b> (based on Bloom’s taxonomy) the topics that were discussed earlier in class. Your class
+              will be conducted <b>online</b> due to Covid situation. You are expecting <b>around 8 to 9 students</b> to
+              attend your class. You want to design an activity that takes
+              <b>not more than 20 minutes and not less than 11 minutes</b> to complete.
+            </p>
           </div>
         </div>
       </div>
 
       <form style="margin-top: 90px" id="form" method="GET">
         <!-- first row -->
+        <div class="row justify-content-center mb-5">
+          <div class="col-md-6">
+            <h4 class="text-center">Now choose the options in the form based on your undrestanding</h4>
+          </div>
+        </div>
         <div class="row top-buffer">
           <div class="col-md-6 col-lg-6 mt-6 row-height">
             <p for="firstQ" class="form-lable">Where do you want to apply your LD?</p>
