--- a/Previews/preview1.html
+++ b/Previews/preview1.html
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="row mt-3">
         <div class="col-12">
-          <div class="alert alert-secondary" role="alert">Air Resistance and Gravity</div>
+          <div class="alert alert-secondary" role="alert">Understanding Rational Choice Theory</div>
         </div>
       </div>
       <div class="row mt-1 justify-content-between">
@@ -118,7 +118,7 @@
             role="tab"
             aria-controls="profile"
             aria-selected="false"
-            >Air Resistance and Gravity</a
+            >Understanding Rational Choice Theory</a
           >
         </li>
         <li class="nav-item pr-3">
@@ -183,18 +183,15 @@
           <div class="overflow-auto" style="overflow-y: scroll">
             <div class="alert alert-dark text-center" role="alert"><b>Activity Summary</b></div>
             <h5>Activity description</h5>
-            <p>
-              Describe the effects of air resistance and gravity on the arrow to memorize how a better result can be
-              achieved.
-            </p>
+            <p>Describe the effect of rational choice theory on social exchange.</p>
             <br />
             <p><b>Type of class: </b> In the Classroom</p>
-            <p><b>Educational Level : </b> Lower Secondary Education</p>
-            <p><b>Bloom's Taxonomy: </b> Remember</p>
-            <p><b>Amount of students: </b> Less than 10 students</p>
-            <p><b>Subject: </b> Science</p>
-            <p><b>Time of Activity : </b> More than 40 minutes</p>
-            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../result-green.html" role="button"
+            <p><b>Educational Level : </b> Bachelor degree</p>
+            <p><b>Bloom's Taxonomy: </b> Understand</p>
+            <p><b>Amount of students: </b> Between 10-20 students</p>
+            <p><b>Subject: </b> Social Science, Business and Law</p>
+            <p><b>Time of Activity : </b> Between 10-20 minutes</p>
+            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
               ><i class="far fa-hand-point-left fa-lg"></i> Back</a
             >
           </div>
