--- a/Previews/preview2.html
+++ b/Previews/preview2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="row mt-3">
         <div class="col-12">
-          <div class="alert alert-secondary" role="alert">Compass in classroom</div>
+          <div class="alert alert-secondary" role="alert">Discourse in Social Psychology</div>
         </div>
       </div>
       <div class="row mt-1 justify-content-between">
@@ -118,7 +118,7 @@
             role="tab"
             aria-controls="profile"
             aria-selected="false"
-            >Compass in classroom</a
+            >Discourse in Social Psychology</a
           >
         </li>
         <li class="nav-item pr-3">
@@ -183,15 +183,15 @@
           <div class="overflow-auto" style="overflow-y: scroll">
             <div class="alert alert-dark text-center" role="alert"><b>Activity Summary</b></div>
             <h5>Activity description</h5>
-            <p>list items required to create a compass in the classroom and describe the steps.</p>
+            <p>Explain the concept of discourse in social psychology. (refer to work of Foucault)</p>
             <br />
-            <p><b>Type of class: </b> Distance Learning</p>
-            <p><b>Educational Level : </b> Lower Secondary Education</p>
-            <p><b>Bloom's Taxonomy: </b> Remember</p>
-            <p><b>Amount of students: </b> Between 30-40 Students</p>
-            <p><b>Subject: </b> Science</p>
-            <p><b>Time of Activity : </b> More than 40 minutes</p>
-            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../result-green.html" role="button"
+            <p><b>Type of class: </b> In the classroom</p>
+            <p><b>Educational Level : </b> Master degree</p>
+            <p><b>Bloom's Taxonomy: </b> Understand</p>
+            <p><b>Amount of students: </b> Between 10-20 Students</p>
+            <p><b>Subject: </b> Social Science, Business and Law</p>
+            <p><b>Time of Activity : </b> Between 20-30 minutes</p>
+            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
               ><i class="far fa-hand-point-left fa-lg"></i> Back</a
             >
           </div>
