--- a/Previews/preview5.html
+++ b/Previews/preview5.html
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="row mt-3">
         <div class="col-12">
-          <div class="alert alert-secondary" role="alert">Conductor and Insulators</div>
+          <div class="alert alert-secondary" role="alert">General Education and Law</div>
         </div>
       </div>
       <div class="row mt-1 justify-content-between">
@@ -118,7 +118,7 @@
             role="tab"
             aria-controls="profile"
             aria-selected="false"
-            >Conductor and Insulators</a
+            >General Education and Law</a
           >
         </li>
         <li class="nav-item pr-3">
@@ -175,15 +175,15 @@
           <div class="overflow-auto" style="overflow-y: scroll">
             <div class="alert alert-dark text-center" role="alert"><b>Activity Summary</b></div>
             <h5>Activity description</h5>
-            <p>Develop a set of conductors and insulators.</p>
+            <p>Describe the relationship between general education and the study of law.</p>
             <br />
-            <p><b>Type of class: </b> In the Classroom</p>
-            <p><b>Educational Level : </b> Lower Secondary Education</p>
-            <p><b>Bloom's Taxonomy: </b> Create</p>
-            <p><b>Amount of students: </b> Between 30-40 students</p>
-            <p><b>Subject: </b> Science</p>
-            <p><b>Time of Activity : </b> Between 10-20 minutes</p>
-            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../result-green.html" role="button"
+            <p><b>Type of class: </b> Distance Learning</p>
+            <p><b>Educational Level : </b> Bachelor degree</p>
+            <p><b>Bloom's Taxonomy: </b> Understand</p>
+            <p><b>Amount of students: </b> Between 10-20 students</p>
+            <p><b>Subject: </b> Humanities & Arts</p>
+            <p><b>Time of Activity : </b> Between 20-30 minutes</p>
+            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
               ><i class="far fa-hand-point-left fa-lg"></i> Back</a
             >
           </div>
