preview in new page, margin bottom pf design page

--- a/result-green.html
+++ b/result-green.html
@@ -82,7 +82,7 @@
         </div>
       </div>
 
-      <div id="app" class="row justify-content-start"></div>
+      <div id="app" class="row justify-content-start mb-5 pb-5"></div>
     </div>
     <!-- Modal -->
     <div
