show/hide scenarios added in two pages

--- a/index.html
+++ b/index.html
@@ -68,31 +68,43 @@
     </nav>
     <!-- end of navbar -->
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-5 mt-4 pt-4">
-          <h4>This is Your Role Playing Scenario</h4>
-        </div>
-        <div class="row justify-content-center mt-2">
-          <div class="col-md-8">
-            <p class="text-justify">
-              You are a teacher in the faculty of <b>social science</b>. You know about PyramidApp and you want to
-              search for current LDs on the platform to find some hint about how to use PyramidApp to create
-              collaborative learning design. You just informed about a recommender system that suggests LDs based on
-              your context of teaching. Your next class is for <b>Master Degree</b> students to help them to
-              <b>remember</b> (based on Bloom’s taxonomy) the topics that were discussed earlier in class. Your class
-              will be conducted <b>online</b> due to Covid situation. You are expecting <b>around 8 to 9 students</b> to
-              attend your class. You want to design an activity that takes
-              <b>not more than 20 minutes and not less than 11 minutes</b> to complete.
-            </p>
+      <div class="row justify-content-right mt-2">
+        <div class="col-md-12 mt-3 pt-3 text-center">
+          <p>
+            <button
+              class="btn btn-outline-warning"
+              type="button"
+              data-toggle="collapse"
+              data-target="#collapser"
+              aria-expanded="false"
+              aria-controls="collapser"
+            >
+              Show/Hide the Scenario
+            </button>
+          </p>
+          <div class="collapse" id="collapser">
+            <div class="card card-body text-justify">
+              <p class="card-text">
+                You are a teacher in the faculty of <b>social science</b>. You know about PyramidApp and you want to
+                search for current LDs on the platform to find some hint about how to use PyramidApp to create
+                collaborative learning design. You just informed about a recommender system that suggests LDs based on
+                your context of teaching. Your next class is for <b>Master Degree</b> students to help them to
+                <b>remember</b> (based on Bloom’s taxonomy) the topics that were discussed earlier in class. Your class
+                will be conducted <b>online</b> due to Covid situation. You are expecting
+                <b>around 8 to 9 students</b> to attend your class. You want to design an activity that takes
+                <b>not more than 20 minutes and not less than 11 minutes</b> to complete.
+              </p>
+            </div>
           </div>
         </div>
       </div>
 
+      <!-- End of Scenario -->
       <form style="margin-top: 90px" id="form" method="GET">
         <!-- first row -->
         <div class="row justify-content-center mb-5">
           <div class="col-md-6">
-            <h4 class="text-center">Now choose the options in the form based on your undrestanding</h4>
+            <h4 class="text-center">You can select the characteristics of your learning design using this form</h4>
           </div>
         </div>
         <div class="row top-buffer">
