--- a/result-green.html
+++ b/result-green.html
@@ -74,6 +74,34 @@
           <div id="result"></div>
           <div id="result2"></div>
         </div>
+        <div class="col-md-7 mt-3 pt-3 text-center">
+          <p>
+            <button
+              class="btn btn-outline-warning"
+              type="button"
+              data-toggle="collapse"
+              data-target="#collapser"
+              aria-expanded="false"
+              aria-controls="collapser"
+            >
+              Show/Hide the Scenario
+            </button>
+          </p>
+          <div class="collapse" id="collapser">
+            <div class="card card-body text-justify">
+              <p class="card-text">
+                You are a teacher in the faculty of <b>social science</b>. You know about PyramidApp and you want to
+                search for current LDs on the platform to find some hint about how to use PyramidApp to create
+                collaborative learning design. You just informed about a recommender system that suggests LDs based on
+                your context of teaching. Your next class is for <b>Master Degree</b> students to help them to
+                <b>remember</b> (based on Bloom’s taxonomy) the topics that were discussed earlier in class. Your class
+                will be conducted <b>online</b> due to Covid situation. You are expecting
+                <b>around 8 to 9 students</b> to attend your class. You want to design an activity that takes
+                <b>not more than 20 minutes and not less than 11 minutes</b> to complete.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
       <hr />
       <div class="row justify-content-start">
