back button removed from preview pages, 20-30 added

--- a/Previews/preview4.html
+++ b/Previews/preview4.html
@@ -12,12 +12,12 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <!-- fontawesome cdn -->
+    <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://kit.fontawesome.com/df1dfdeddd.js" crossorigin="anonymous"></script>
-    <!-- custome css -->
+    <!-- custom css -->
     <link rel="stylesheet" href="preview.css" />
-    <!-- custome javascript -->
+    <!-- custom javascript -->
     <script src="app.js" defer></script>
     <script src="formControl.js" defer></script>
     <!-- favicon -->
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="row mt-3">
         <div class="col-12">
-          <div class="alert alert-secondary" role="alert">Monotheisitic religions</div>
+          <div class="alert alert-secondary" role="alert">Monotheistic religions</div>
         </div>
       </div>
       <div class="row mt-1 justify-content-between">
@@ -118,7 +118,7 @@
             role="tab"
             aria-controls="profile"
             aria-selected="false"
-            >Monotheisitic religions</a
+            >Monotheistic religions</a
           >
         </li>
         <li class="nav-item pr-3">
@@ -176,8 +176,7 @@
             <div class="alert alert-dark text-center" role="alert"><b>Activity Summary</b></div>
             <h5>Activity description</h5>
             <p>
-              State three significant monotheisitic religions in the world, and recognize their geographical
-              diversities.
+              State three significant monotheistic religions in the world, and recognize their geographical diversities.
             </p>
             <br />
             <p><b>Type of class: </b> In the Classroom</p>
@@ -186,9 +185,9 @@
             <p><b>Amount of students: </b> Between 10-20 Students</p>
             <p><b>Subject: </b> Humanities & Arts</p>
             <p><b>Time of Activity : </b> Between 20-30 minutes</p>
-            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
+            <!-- <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
               ><i class="far fa-hand-point-left fa-lg"></i> Back</a
-            >
+            > -->
           </div>
         </div>
         <!-- third tab -->
