--- a/Previews/preview6.html
+++ b/Previews/preview6.html
@@ -12,12 +12,12 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <!-- fontawesome cdn -->
+    <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://kit.fontawesome.com/df1dfdeddd.js" crossorigin="anonymous"></script>
-    <!-- custome css -->
+    <!-- custom css -->
     <link rel="stylesheet" href="preview.css" />
-    <!-- custome javascript -->
+    <!-- custom javascript -->
     <script src="app.js" defer></script>
     <script src="formControl.js" defer></script>
     <!-- favicon -->
@@ -178,14 +178,14 @@
             <p>Classify the existing definitions of class in western societies.</p>
             <br />
             <p><b>Type of class: </b> In the Classroom</p>
-            <p><b>Educational Level : </b> Bacheor degree</p>
+            <p><b>Educational Level : </b> Bachelor degree</p>
             <p><b>Bloom's Taxonomy: </b> Understand</p>
             <p><b>Amount of students: </b> Less than 10 students</p>
             <p><b>Subject: </b> Humanities & Arts</p>
             <p><b>Time of Activity : </b> Between 20-30 minutes</p>
-            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
+            <!-- <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
               ><i class="far fa-hand-point-left fa-lg"></i> Back</a
-            >
+            > -->
           </div>
         </div>
         <!-- third tab -->
