--- a/result-green.html
+++ b/result-green.html
@@ -12,10 +12,10 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <!-- fontawesome cdn -->
+    <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://kit.fontawesome.com/df1dfdeddd.js" crossorigin="anonymous"></script>
-    <!-- custome script -->
+    <!-- custom script -->
     <script src="scripts/formControl.js" defer></script>
     <script src="scripts/resultcontrol.js" defer></script>
     <script src="scripts/designGenerator.js" defer></script>
