--- a/Previews/preview1.html
+++ b/Previews/preview1.html
@@ -12,12 +12,12 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <!-- fontawesome cdn -->
+    <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://kit.fontawesome.com/df1dfdeddd.js" crossorigin="anonymous"></script>
-    <!-- custome css -->
+    <!-- custom css -->
     <link rel="stylesheet" href="preview.css" />
-    <!-- custome javascript -->
+    <!-- custom javascript -->
     <script src="app.js" defer></script>
     <script src="formControl.js" defer></script>
     <!-- favicon -->
@@ -191,9 +191,9 @@
             <p><b>Amount of students: </b> Between 10-20 students</p>
             <p><b>Subject: </b> Social Science, Business and Law</p>
             <p><b>Time of Activity : </b> Between 10-20 minutes</p>
-            <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
+            <!-- <a class="btn btn-outline-info float-left ml-3 mb-5" href="../resBlank.html" role="button"
               ><i class="far fa-hand-point-left fa-lg"></i> Back</a
-            >
+            > -->
           </div>
         </div>
         <!-- third tab -->
